<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (c) 2026, Adel Noureddine.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the
  ~ GNU Lesser General Public License v3.0 (LGPL-3.0-only)
  ~ which accompanies this distribution, and is available at
  ~ https://www.gnu.org/licenses/lgpl-3.0.en.html
  ~
  ~ Author : Adel Noureddine
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.noureddine.joular</groupId>
    <artifactId>joularcodejava</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>
    
    <name>${project.artifactId}</name>
    <description>Joular Code Java is a lightweight and efficient Java agent for monitoring the energy consumption of methods and executions branches</description>
    <inceptionYear>2026</inceptionYear>
    <url>https://github.com/joular/joularcode-java</url>
    
    <licenses>
        <license>
            <name>The GNU Lesser General Public License v3.0 (LGPL-3.0-only)</name>
            <url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Adel Noureddine</name>
            <email>adel.noureddine@outlook.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/joular/joularcode-java.git</connection>
        <developerConnection>scm:git:ssh://github.com:joular/joularcode-java.git</developerConnection>
        <url>https://github.com/joular/joularcode-java</url>
    </scm>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.18.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.0.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.23.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.5</version>
                <configuration>
                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Agent-Class>org.noureddine.joular.joularcodejava.agent.Agent</Agent-Class>
                            <Premain-Class>org.noureddine.joular.joularcodejava.agent.Agent</Premain-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Agent-Class>org.noureddine.joular.joularcodejava.agent.Agent</Agent-Class>
                                        <Premain-Class>org.noureddine.joular.joularcodejava.agent.Agent</Premain-Class>
                                        <Can-Redefine-Classes>true</Can-Redefine-Classes>
                                        <Can-Retransform-Classes>true</Can-Retransform-Classes>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>